--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,16 @@
 			padding: 0;
 		}
 
+		.clock-container {
+			position: fixed;
+			top: 7px;
+			left: 7px;
+			background-color: #3b3b3b;
+			border-radius: 5px;
+			padding: 5px;
+			z-index: 9999;
+		}
+
 		.article {
 			float:right; 
 			background-color:#3b3b3b;
