--- a/index-styles.css
+++ b/index-styles.css
@@ -5,6 +5,16 @@
 			margin: 0;
 			padding: 0;
 		}
+
+		.clock-container {
+			position: fixed;
+			top: 7px;
+			left: 7px;
+			background-color: #3b3b3b;
+			border-radius: 5px;
+			padding: 5px;
+			z-index: 9999;
+		}
 		
 		.body-container {
 			position: relative;
